--- a/package.json
+++ b/package.json
@@ -77,5 +77,9 @@
     },
     "coverageDirectory": "<rootDir>/../coverage",
     "testEnvironment": "node"
-  }
+  },
+	"engines": {
+		"node": "14.17.1",
+		"npm": "7.13.0"
+	}
 }
