--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "expense-tracker",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "",
   "author": "",
   "private": true,
@@ -21,46 +21,47 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "8.0.6",
-    "@nestjs/config": "0.6.3",
-    "@nestjs/core": "8.0.6",
-    "@nestjs/jwt": "7.2.0",
-    "@nestjs/mapped-types": "*",
-    "@nestjs/mongoose": "7.2.4",
-    "@nestjs/platform-express": "8.0.6",
-    "bcrypt": "5.0.1",
-    "class-transformer": "0.4.0",
-    "class-validator": "0.13.1",
-    "lodash": "4.17.21",
-    "mongoose": "5.12.13",
-    "passport-jwt": "4.0.0",
-    "reflect-metadata": "0.1.13",
-    "rimraf": "3.0.2",
-    "rxjs": "6.6.7"
+    "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^1.0.1",
+    "@nestjs/core": "^8.0.0",
+    "@nestjs/jwt": "^8.0.0",
+    "@nestjs/mapped-types": "^1.0.0",
+    "@nestjs/mongoose": "^8.0.0",
+    "@nestjs/platform-express": "^8.0.0",
+    "bcrypt": "^5.0.1",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
+    "lodash": "^4.17.21",
+    "mongoose": "^5.13.5",
+    "passport-jwt": "^4.0.0",
+    "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
+    "rxjs": "^7.2.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "8.1.1",
-    "@nestjs/schematics": "7.3.1",
-    "@nestjs/testing": "8.0.6",
-    "@types/bcrypt": "5.0.0",
-    "@types/express": "4.17.12",
-    "@types/jest": "26.0.23",
-    "@types/lodash": "4.14.170",
-    "@types/node": "14.17.5",
-    "@types/supertest": "2.0.11",
-    "@typescript-eslint/eslint-plugin": "4.28.2",
-    "@typescript-eslint/parser": "4.28.2",
-    "eslint": "7.28.0",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-prettier": "3.4.0",
-    "jest": "26.6.3",
-    "prettier": "2.3.1",
-    "supertest": "6.1.3",
-    "ts-jest": "26.5.6",
-    "ts-loader": "9.2.2",
-    "ts-node": "9.1.1",
-    "tsconfig-paths": "3.9.0",
-    "typescript": "4.3.5"
+    "@nestjs/cli": "^8.0.0",
+    "@nestjs/schematics": "^8.0.0",
+    "@nestjs/testing": "^8.0.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.13",
+    "@types/express-serve-static-core": "^4.17.24",
+    "@types/jest": "^26.0.24",
+    "@types/lodash": "^4.14.172",
+    "@types/node": "^16.0.0",
+    "@types/supertest": "^2.0.11",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
+    "eslint": "^7.30.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "jest": "27.0.6",
+    "prettier": "^2.3.2",
+    "supertest": "^6.1.3",
+    "ts-jest": "^27.0.3",
+    "ts-loader": "^9.2.3",
+    "ts-node": "^10.0.0",
+    "tsconfig-paths": "^3.10.1",
+    "typescript": "^4.3.5"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -78,8 +79,8 @@
     "coverageDirectory": "<rootDir>/../coverage",
     "testEnvironment": "node"
   },
-	"engines": {
-		"node": "14.17.3",
-		"npm": "7.13.0"
-	}
+  "engines": {
+    "node": "14.17.3",
+    "npm": "7.13.0"
+  }
 }
